--- a/20 - Speech Detection/package.json
+++ b/20 - Speech Detection/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.12.5"
+    "browser-sync": "^2.23.5"
+  },
+  "dependencies": {
+    "global": "^4.3.2"
   }
 }
